# rp2040-bmi160-gyroscope

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c
driver/: bmi160.h  bmi160_def.h
